Pascal/test/cohadar/pascal/errors/bad_operands_logic.pas
program test;
var a: integer;
	b: boolean;

begin
	a := b and a;
end.